--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -47,5 +47,11 @@
   "myList" : "قائمتي",
   "other" : "اخر",
   "updateApp" : "تحديث التطبيق",
-  "whoAreWe" : "من نحن؟"
+  "aboutUs" : "من نحن؟",
+  "aboutUsDec" : "نحن فريق من المطورين المتحمسين المكرسين لإنشاء تطبيقات مذهلة. مهمتنا هي توفير حلول برمجية عالية الجودة تلبي احتياجات مستخدمينا.",
+  "ourTeam" : "لدينا فريق",
+  "ourTeamDec" : "يتكون فريقنا من مطورين ومصممين ومديري مشاريع ذوي خبرة يعملون معا لتقديم أفضل المنتجات الممكنة.",
+  "contactUs" : "اتصل بنا"
+
+
 }
