--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -51,5 +51,31 @@
   "aboutUsDec" : "We are a team of passionate developers dedicated to creating amazing applications. Our mission is to provide high-quality software solutions that meet the needs of our users.",
   "ourTeam" : "Our Team",
   "ourTeamDec" : "Our team consists of experienced developers, designers, and project managers who work together to deliver the best possible products.",
-  "contactUs" : "Contact Us"
+  "contactUs" : "Contact Us",
+  "rating" : "Rating",
+  "addList" : "Add List",
+  "name" : "Name",
+  "usarName" : "User Name",
+  "email" : "Email",
+  "editProfile" : "Edit Profile",
+  "arrangementOptions" : "Arrangement Options",
+  "latest" : "The Latest",
+  "oldest" : "The Oldest",
+  "sortAscending" : "Sort by name Ascending",
+  "sortDescending" : "Sort by name Descending",
+  "exit" : "Exit",
+  "selectCategory" : "Select Category",
+  "horror" : "Horror",
+  "romance" : "Romance",
+  "children" : "Children",
+  "adventure" : "Adventure",
+  "selectType" : "Select Type",
+  "stories" : "Stories",
+  "novels" : "Novels",
+  "rateFrom" : "Rate from 1 to 10",
+  "selectYourRating" : "Select your rating: ",
+  "submit" : "Submit"
+
+
+
 }
