profile and langouge ar ,en

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -47,5 +47,32 @@
   "myList" : "قائمتي",
   "other" : "اخر",
   "updateApp" : "تحديث التطبيق",
-  "whoAreWe" : "من نحن؟"
+  "aboutUs" : "من نحن؟",
+  "aboutUsDec" : "نحن فريق من المطورين المتحمسين المكرسين لإنشاء تطبيقات مذهلة. مهمتنا هي توفير حلول برمجية عالية الجودة تلبي احتياجات مستخدمينا.",
+  "ourTeam" : "لدينا فريق",
+  "ourTeamDec" : "يتكون فريقنا من مطورين ومصممين ومديري مشاريع ذوي خبرة يعملون معا لتقديم أفضل المنتجات الممكنة.",
+  "contactUs" : "اتصل بنا",
+  "rating" : "تقييم الموقع",
+  "addList" : "إضافة قائمة",
+  "name" : "اسم",
+  "usarName" : "اسم المستخدم",
+  "email" : "البريد الإلكتروني",
+  "editProfile" : "تحرير الملف الشخصي",
+  "arrangementOptions" : "خيارات الترتيب",
+  "latest" : "الأحدث",
+  "oldest" : "الأقدم",
+  "sortAscending" : "فرز حسب الاسم تصاعدي",
+  "sortDescending" : "فرز حسب الاسم تنازليا",
+  "exit" : "انهاء",
+  "selectCategory" : "اختر الفئة",
+  "horror" : "رعب",
+  "romance" : "رومانسيه",
+  "children" : "أطفال",
+  "adventure" : "مغامرة",
+  "selectType" : "اختر النوع",
+  "stories" : "قصص",
+  "novels" : "روايات",
+  "rateFrom" : "السعر من 1 إلى 10",
+  "selectYourRating" : "حدد تقييمك: ",
+  "submit" : "إرسال"
 }
